--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "cypress": "^3.5.0",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-root-import": "^2.0.5",
+    "gh-pages": "^3.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
@@ -85,7 +86,10 @@
     "test:e2e:ci": "start-server-and-test develop http://localhost:8000 cy:run",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prettier": "prettier --write **/*.{ts,js,css,html}"
+    "prettier": "prettier --write **/*.{ts,js,css,html}",
+    "deploy": "gatsby build && gh-pages -d public -b main",
+	"clean": "gatsby clean"
+
   },
   "repository": {
     "type": "git",
