--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-plugin-styled-components": "^1.10.7",
+    "dateformat": "^4.5.1",
     "disqus-react": "^1.0.7",
-    "gatsby": "^2.24.67",
+    "gatsby": "^2.32.13",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-google-analytics": "^2.1.23",
     "gatsby-plugin-manifest": "^2.2.3",
@@ -32,6 +33,7 @@
     "gatsby-transformer-remark": "^2.6.28",
     "gatsby-transformer-sharp": "^2.2.21",
     "intersection-observer": "^0.7.0",
+    "jimp": "^0.16.1",
     "normalize.css": "^8.0.1",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
@@ -88,8 +90,7 @@
     "test:watch": "jest --watch",
     "prettier": "prettier --write **/*.{ts,js,css,html}",
     "deploy": "gatsby build && gh-pages -d public -b main",
-	"clean": "gatsby clean"
-
+    "clean": "gatsby clean"
   },
   "repository": {
     "type": "git",
