--- a/content/json/jsprojects.json
+++ b/content/json/jsprojects.json
@@ -3,10 +3,12 @@
   {
     "title": "(Research) A study on parameter pruning and quantization for faster alignment and averaging of subtomograms captured by cryo-electron tomography",
     "links": {
-      "codepen": "https://res.cloudinary.com/dosluptl1/image/upload/v1626100867/model-compress_dvwyjr.gif",
+      "codepen": "https://res.cloudinary.com/dosluptl1/image/upload/v1626347502/alignment_brx6vg.gif",
       "github": "https://github.com/anshabhi/model_compression"
     },
-    "description": "We study how parameter pruning and quantization, a famous model compression method, can be applied to the alignment of subtomograms captured by cryo-electron tomography. We try to explain the physical significance of the model compression obtained through this method. Later, we compare the compression achieved and the error incurred for the compressed models through each technique. We present the results for five datasets, all simulated at different SNR levels. Gum-Net, an unsupervised model for Subtomogram Image Alignment and Averaging, has been used as the base model in this study."
+    "excerpt1": "We study how parameter pruning and quantization, can be applied to the alignment of subtomograms captured by cryo-electron tomography.",
+	"excerpt2": "We try to explain the physical significance of the model compression obtained through this method. Later, we compare the compression achieved and the error incurred for the compressed models through each technique. We present the results for five datasets, all simulated at different SNR levels.",
+	"excerpt3": "Model and compression methods implemented in Tensorflow "
   },
   {
     "title": "(Research) Natural Language Query Formalization to SPARQL For Querying Knowledge Bases Using Rasa",
@@ -14,7 +16,9 @@
       "codepen": "https://res.cloudinary.com/dosluptl1/image/upload/v1626100847/rasa_tiguvm.gif",
       "github": "https://github.com/anshabhi/rasa-project"
     },
-    "description": "This paper discusses an AI-based approach with the design of an ontology searching chat-bot that incorporates natural language query formalization for querying linked data using RASA for entity extraction after intent recognition. A precision-recall analysis is performed using in-built RASA tools in conjunction with our own testing parameters, and it is found that the accuracy of our methodology is at parwith the current state of the art."
+    "excerpt1": "Designed an NLP-based conversational AI agent (chatbot) using RASA NLU and Python to query OWL ontologies.",
+	"excerpt2": "Converts plain english language queries into SPARQL queries then queries the ontology to fetch results",
+	"excerpt3": "Built scripts to use RASA's internal testing suite and achieved up to 97% keyword accuracy."
   },
    {
     "title": "DeepLearning.ai Specialization",
@@ -22,6 +26,8 @@
       "codepen": "https://res.cloudinary.com/dosluptl1/image/upload/v1625075486/deeplearning_qctfmd.gif",
       "github": "https://github.com/anshabhi/deeplearning.ai"
     },
-    "description": "This is a 5 course intermediate level deeplearning specialization offered by world renowned Machine Learning Teacher, Andrew Ng. The topics learned include developing and improving neural networks, including special cases like Convolutional Neural Networks and Sequence Models, along with structuring machine learning projects. The specialization involves around 20 assignments using Tensorflow and other Python libraries. Some notable projects include autonomous driving systems, neural art transfer and trigger word detection."
+	"excerpt1": "5 course intermediate level deeplearning specialization offered by world renowned Andrew Ng.",
+	"excerpt2": "Topics learned include developing and improving neural networks and structuring machine learning projects.",
+	"excerpt3": " The specialization involves around 20 assignments using Tensorflow and other Python libraries. Some notable projects include autonomous driving systems, neural art transfer and trigger word detection."
   }
 ]
